--- a/contactlist/templates/header.html
+++ b/contactlist/templates/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{{ context.title }}</title>
+        <title>{{ title }}</title>
         <style>
 {% include "base.css" %}
 {% include "dark_flat.css" %}
