--- a/contactlist/templates/header.html
+++ b/contactlist/templates/header.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
     <head>
         <title>{{ title }}</title>
+        <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
         <style>
 {{ styling|safe }}
         </style>
