--- a/contactlist/templates/main.html
+++ b/contactlist/templates/main.html
@@ -3,14 +3,12 @@
             <tr>{% for header in headers %}
                 <th style="width: {{ header.width }}%;">{{ header.title }}</th>{% endfor %}
             </tr>
-            {% for r in data %}<tr>{% for h in headers %}
-                {% if h.col != "" %}
-                <td>{{ r|get_item:h.col }}</td>
-                {% elif h.button != "" %}
-                <td class="actbutton"><a href="{{ h.button }}/{{ r.inid }}/"><button>{{ h.button }}</button></a></td>
-                {% else %}
-                <td></td>
-                {% endif %}{% endfor %}
+            {% for r in data %}<tr>{% for h in headers %}{% if h.type == "info" %}
+                <td>{{ r|get_item:h.col }}</td>{% elif h.type == "button" %}{% if h.link != "" %}{% if h.icon != "" %}
+                <td class="actbutton"><a href="{{ h.link }}/{{ r.inid }}/"><button><span class="{{ h.icon }}" title="{{ h.text }}"></span></button></a></td>{% else %}
+                <td class="actbutton"><a href="{{ h.link }}/{{ r.inid }}/"><button>{{ h.text }}</button></a></td>{% endif %}{% else %}
+                <td></td>{% endif %}{% else %}
+                <td></td>{% endif %}{% endfor %}
             </tr>{% endfor %}
         </table>
 {% include "footer.html" %}
