--- a/config/themes/default-light/style.css
+++ b/config/themes/default-light/style.css
@@ -25,38 +25,22 @@ h1, h2, h3, h4, h5, p, p a {
 }
 
 .docs_browse_link:hover {
-    background-color: #DDDDDD;
+    background-color: #222222;
 }
 
 table.view, table.form {
     border-spacing: 0pt;
 }
 
-table.view td, table.form td, table.view th, table.form th {
+table.form td, table.form th {
     border: 0;
     border-style: solid;
     margin: 0pt;
     padding: 2pt;
 }
 
-table th {
-    border-right: 1pt solid #000000;
-    border-bottom: 1pt solid #000000;
-}
-
 table {
     border-spacing: 0pt;
-}
-
-table td {
-    border-right: 1pt;
-    border-left: 0;
-    border-top: 0;
-    border-bottom: 1pt;
-    border-color: #000000;
-    border-style: solid;
-    margin: 0pt;
-    padding: 2pt;
 }
 
 .navbar ul {
@@ -72,21 +56,16 @@ table td {
 }
 
 .dropdown-content {
-    background-color: #FFFFFF;
+    background-color: #000000;
 }
 
 .dropdown-content a:hover {
     background-color: #222222;
 }
 
-.btn-group-rlmenu {
-    display: flex;
-}
-
 .btn-group-rlmenu button {
     background-color: #000000;
-    border: 0.5pt solid #FFFFFF;
-    margin: 4pt;
+    border: 0.5pt solid #000000;
     color: #FFFFFF;
     padding: 10px 24px;
     cursor: pointer;
@@ -99,7 +78,6 @@ table td {
 .actbutton {
     margin: 0pt;
     padding: 0pt;
-    background-color: #FFFFFF;
     cursor: pointer;
 }
 
@@ -117,11 +95,11 @@ table td {
 
 input[type="submit"] {
     background-color: #000000;
-    border: 0.5pt solid #FFFFFF;
-    margin: 4pt;
+    border: 0.5pt solid #000000;
     color: #FFFFFF;
     padding: 10px 24px;
-    cursor: pointer;
-    display: block;
-    width: 98.5%;
+}
+
+.sort-options i {
+    color: #FFFFFF;
 }
