--- a/config/common/base.css
+++ b/config/common/base.css
@@ -59,7 +59,6 @@ h1, h2, h3, h4, h5 {
 
 .btn-group-rlmenu {
     padding: 4pt;
-    margin: 2pt;
     display: block;
 }
 
@@ -70,12 +69,12 @@ h1, h2, h3, h4, h5 {
 
 .btn-group-rlmenu a, .btn-group-rlmenu form {
     width: 100%;
-    margin: 2pt;
     text-decoration: none;
 }
 
 form {
-    width: 100%;
+    max-width: 100%;
+    margin: 4pt;
 }
 
 input[type="submit"] {
