--- a/contactlist/templates/header.html
+++ b/contactlist/templates/header.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 {% load static %}
 <html>
-    <head>
+    <head lang="en">
         <title>{{ title }}</title>
+        <meta charset="UTF-8">
+        <meta name="generator" content="ContactList {{ ver }}">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">{% if fa %}
         <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
-        <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
-        <!-- TODO: figure out a way to disable the loading of JQuery/tablesorter when it is not needed -->
+        <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">{% endif %}{% if jq %}
+        <script type="text/javascript" src="{{ misc.jquery }}"></script>{% endif %}{% if ts %}
         <link rel="stylesheet" href="{{ styling.tstheme.file }}">
-        <script type="text/javascript" src="{{ misc.jquery }}"></script>
         <script type="text/javascript" src="{{ misc.tablesorter }}"></script>
-        <script type="text/javascript" src="{{ misc.tablesorterwidget }}"></script>
+        <script type="text/javascript" src="{{ misc.tablesorterwidget }}"></script>{% endif %}
         <style>
-{{ styling.styling|safe }}
+{{ styling.css|safe }}
         </style>
     </head>
     <body>
         <div class="navbar">
-            <ul>{% for item in navbar.content %}
+            <ul>{% for item in navbar %}
                 {% if item.type == "dropdown" %}
                 <li class="dropdown" style="float: {{ item.float }}">
                     <a href="javascript:void(0)" class="dropbtn">{{ item.text }}</a>
