--- a/contactlist/templates/view.html
+++ b/contactlist/templates/view.html
@@ -4,7 +4,7 @@
         <table class="view">{% for key, values in data.items %}
             <tr>
                 <td>{{headers|get_item:key}}</td>
-                <td>{{values}}</td>
+                <td>{{values|safe}}</td>
             </tr>
         {% endfor %}</table>
 {% include "footer.html" %}
