--- a/config/common/base.css
+++ b/config/common/base.css
@@ -9,9 +9,11 @@ table {
 
 h1, h2, h3, h4, h5 {
     text-align: center;
+    padding: 4pt;
+    margin: 2pt;
 }
 
-h1, h2, h3, h4, h5, p, p a {
+p, p a {
     padding: 4pt;
     margin: 2pt;
 }
@@ -59,31 +61,6 @@ input {
 
 .content {
     margin: 4pt;
-}
-
-.navbar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    height: 48px;
-    overflow: hidden;
-}
-
-.navbar li {
-    float: left;
-}
-
-.navbar li a {
-    display: grid;
-    text-align: center;
-    height: 48px;
-    text-decoration: none;
-    align-content: center;
-    padding: 0px 12px;
-}
-
-.navbar li.dropdown {
-    display: inline-block;
 }
 
 .dropdown-content {
