--- a/config/themes/default/styling.scss
+++ b/config/themes/default/styling.scss
@@ -6,10 +6,10 @@
     --bs-body-color-rgb: 255,255,255;
     --bs-secondary-bg: #222222;
     --bs-secondary-bg-rgb: 34,34,34;
-    --bs-secondary-color: #CCCCCC;
+    --bs-secondary-color: #FFFFFF;
     --bs-secondary-color-rgb: 204,204,204;
     --bs-tertiary-bg: #333333;
     --bs-tertiary-bg-rgb: 51,51,51;
-    --bs-tertiary-color: #BBBBBB;
+    --bs-tertiary-color: #FFFFFF;
     --bs-tertiary-color-rgb: 187,187,187;
 }
