--- a/contactlist/templates/header.html
+++ b/contactlist/templates/header.html
@@ -20,17 +20,29 @@
     </head>
     <body data-bs-theme={{ bsparams.theme }}>
         <script type="text/javascript" src="{{ misc.bootstrapjsurl }}"></script>
-        <nav class="navbar navbar-expand-{{bsparams.size}}">
+        <nav class="navbar navbar-expand-{{bsparams.size}} bg-body-tertiary">
             <div class="container-fluid">
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">{% for item in navbar %}{% if item.type == "link" %}
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-lg-0">{% for item in navbar %}{% if item.type == "link" %}{% if item.float == "left" %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ item.link }}">{{ item.text }}</a>
                         </li>
                         {% elif item.type == "dropdown" %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ item.text }}</a>
-                        </li>{% endif %}{% endfor %}
+                        </li>{% endif %}{% endif %}{% endfor %}
+                    </ul>
+                    <ul class="navbar-nav ms-auto mb-lg-0">{% for item in navbar %}{% if item.type == "link" %}{% if item.float == "right" %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ item.link }}">{{ item.text }}</a>
+                        </li>
+                        {% elif item.type == "dropdown" %}
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ item.text }}</a>
+                        </li>{% endif %}{% endif %}{% endfor %}
                     </ul>
                 </div>
             </div>
