--- a/config/common/base.scss
+++ b/config/common/base.scss
@@ -37,12 +37,12 @@ form {
 form table {
     max-width: 100%;
 }
-
+/*
 form table tr td {
     max-width: 50%;
     width: 50%;
 }
-
+*/
 form table tr td input, form table tr td select, form table tr td textarea {
     width: 100%;
 }
