--- a/docs/templates/docs_header.html
+++ b/docs/templates/docs_header.html
@@ -4,7 +4,7 @@
     <head lang="en">
         <title>{{ title }}</title>
         <meta charset="UTF-8">
-        <meta name="generator" content="CAMS {{ ver }}">
+        <meta name="generator" content="ContactList {{ ver }}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">{% if fa %}
         <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
@@ -28,8 +28,7 @@
                     <ul class="navbar-nav me-auto mb-lg-0">{% for item in navbar %}{% if item.type == "link" %}{% if item.float == "left" %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ item.link }}">{{ item.text }}</a>
-                        </li>
-                        {% elif item.type == "dropdown" %}
+                        </li>{% elif item.type == "dropdown" %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ item.text }}</a>
                         </li>{% endif %}{% endif %}{% endfor %}
@@ -37,8 +36,7 @@
                     <ul class="navbar-nav ms-auto mb-lg-0">{% for item in navbar %}{% if item.type == "link" %}{% if item.float == "right" %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ item.link }}">{{ item.text }}</a>
-                        </li>
-                        {% elif item.type == "dropdown" %}
+                        </li>{% elif item.type == "dropdown" %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{ item.text }}</a>
                         </li>{% endif %}{% endif %}{% endfor %}
