--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -6,6 +6,7 @@
             });
         });
     </script>
+    <h1>Search Results</h1>
     <table id="maintable" class="tablesorter">
         <thead>
             <tr>{% for header in headers %}{% if header.type == "button" %}
