--- a/config/styling/main.scss
+++ b/config/styling/main.scss
@@ -1,12 +1,24 @@
-/*
-ContactList - CTCL 2023-2024
-File: runner_dev
-Purpose: Linux/BSD script for running the application in development environments
-Created: January 11, 2024
-Modified: January 12, 2024
-*/
-
 .footertext {
     text-align: center;
     font-size: 10pt;
+}
+
+table {
+    width: 100%;
+}
+
+.btn {
+    --bs-btn-font-size: 10pt;
+}
+
+h1 {
+    text-align: center;
+}
+
+form {
+    padding: 8pt;
+}
+
+a:has(.btn) {
+    text-decoration: none;
 }
