--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -3,4 +3,5 @@
         <h1>New Contact</h1>
         <hr>
         {% crispy form form.helper %}
+        {{ form.media }}
 {% include "footer.html" %}
