--- a/config/styling/ts_theme.scss
+++ b/config/styling/ts_theme.scss
@@ -3,7 +3,7 @@ ContactList - CTCL 2023-2024
 File: ts_theme.scss
 Purpose: Theme used for tablesorter
 Created: January 11, 2024
-Modified: January 12, 2024
+Modified: February 17, 2024
 
 Tablesorter Custom SCSS Theme by Dan Feidt (https://github.com/HongPong)
 Converted from Custom LESS Theme by Rob Garrison
@@ -21,7 +21,7 @@ $tableBodyFont         : 12pt 'trebuchet ms', verdana, arial;
 /* for best results, only change the hue (120),
    leave the saturation (60%) and luminosity (75%) alone
    pick the color from here: http://hslpicker.com/#99E699 */
-$headerBackground      : hsl(240, 60%, 80%);
+$headerBackground      : #dee2e6;
 $borderAndBackground   : #cdcdcd;
 $overallBorder         : $borderAndBackground 1px solid;
 $headerTextColor       : #000;
