--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -7,7 +7,7 @@
         <meta name="generator" content="ContactList {{ ver }}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
         <link rel="stylesheet" href="{% static 'main.css' %}">
         {% if jq %}
         <script type="text/javascript" src="{% static 'jquery.min.js' %}"></script>
