--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -18,6 +18,10 @@
                     </table>
                 {% endfor %}
                 </div>
+                
+            </div>
+            <div class="d-grid gap-2">
+                <a class="btn btn-primary" href="/edit/{{ id }}/" role="button">Edit</a>
             </div>
         </div>
 
