--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,23 +1,39 @@
 {% include "header.html" %}
     <script>
+        $.tablesorter.addParser({ 
+            id: "customDate",
+            is: function(s) {
+                return false;
+            },
+            format: function(s) {
+                // e.g. Feb 11, 2024, 15:35 UTC
+                return $.tablesorter.formatFloat(new Date(s).getTime());                                         
+            },
+            type: "numeric"}
+        );
+
         $(function() {
             $("#maintable").tablesorter({ 
-                theme : "contactlist-dark"
+                theme: "contactlist-dark",
+                headers: {{% with headers|length as n %}{% with ''|center:n as range %}{% for _, header in range|zip:headers %}{% if header.type == "info" %} 
+                {{ forloop.counter|add:"-1" }}: { sorter: true },{% elif header.type == "infotime" %}
+                {{ forloop.counter|add:"-1" }}: { sorter: "customDate" },{% elif header.type == "buttons" %}
+                {{ forloop.counter|add:"-1" }}: { sorter: false }
+                {% endif %}{% endfor %}{% endwith %}{% endwith %}}
             });
         });
     </script>
     <table id="maintable" class="tablesorter">
         <thead>
-            <tr>{% for header in headers %}{% if header.type == "buttons" %}
-                <th style="width: {{ header.width }}%;" class="sorter-false">{{ header.title }}</th>{% else %}
-                <th style="width: {{ header.width }}%;">{{ header.title }}</th>{% endif %}{% endfor %}
+            <tr>{% for header in headers %}
+                <th style="width: {{ header.width }}%;">{{ header.title }}</th>{% endfor %}
             </tr>
         </thead>
         <tbody>
             {% for r in data %}
             <tr>
             {% for h in headers %}
-                {% if h.type == "info" %}
+                {% if h.type == "info" or h.type == "infotime" %}
                 <td>{{ r|get_item:h.col }}</td>
                 {% elif h.type == "buttons" %}
                 <td>
